--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,14 @@
 BN_API_KEY=your_binance_api_key_here
 BN_SECRET=your_binance_secret_key_here
 
-# OpenRouter API Key (for DeepSeek Chat V3.1)
-OPENROUTER_API_KEY=openrouter_api_key_here
+# OpenRouter API Key and Model Configuration
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+OPENROUTER_MODEL_NAME="deepseek/deepseek-chat"
 
-# Telegram Bot Credentials
+# Notification Robot Configuration
+# Use "telegram" or "dingtalk"
+ROBOT="telegram"
+
+# Telegram Bot Credentials (if ROBOT is "telegram")
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 TELEGRAM_CHAT_ID=your_telegram_chat_id_here
